--- a/src/app/admin-template/admin-template.component.html
+++ b/src/app/admin-template/admin-template.component.html
@@ -34,7 +34,7 @@
         </button>
       </mat-list-item>
       <mat-list-item>
-        <button mat-button routerLink="/payments">
+        <button mat-button routerLink="/admin/payments">
           <mat-icon>dashboard</mat-icon>
           Payments
         </button>
