--- a/src/app/payments/payments.component.html
+++ b/src/app/payments/payments.component.html
@@ -5,7 +5,60 @@
       </mat-card-header>
       <mat-divider></mat-divider>
       <mat-card-content>
-        Payments Content
+        <table matSort mat-table [dataSource]="dataSource" class="mat-elevation-z1">
+  
+          <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="date">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
+            <td mat-cell *matCellDef="let element"> {{element.date}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="amount">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Amount </th>
+            <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="paymentType">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Type </th>
+            <td mat-cell *matCellDef="let element"> {{element.paymentType}} </td>
+          </ng-container>
+
+          <ng-container matColumnDef="paymentStatus">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+            <td mat-cell *matCellDef="let element"> {{element.paymentStatus}} </td>
+          </ng-container>
+  
+          <!-- Name Column -->
+          <ng-container matColumnDef="firstName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Student </th>
+            <td mat-cell *matCellDef="let element"> {{element.student.firstName}} </td>
+          </ng-container>
+  
+          <!-- <ng-container matColumnDef="lastName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Name </th>
+            <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
+          </ng-container>
+  
+          <ng-container matColumnDef="payments">
+            <th mat-header-cell *matHeaderCellDef> Payments</th>
+            <td mat-cell *matCellDef="let element">
+             <button (click)="getPayments(element)" mat-raised-button color="primary">Payments</button>
+            </td>
+          </ng-container> -->
+  
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+
+        <mat-paginator [pageSizeOptions]="[5, 10, 20, 50, 100]"
+                 showFirstLastButtons
+                 aria-label="Select page of periodic elements">
+      </mat-paginator>
+    
       </mat-card-content>
     </mat-card>
   </div>
