--- a/src/app/students/students.component.html
+++ b/src/app/students/students.component.html
@@ -2,6 +2,7 @@
   <mat-card>
     <mat-card-header>
       <mat-card-title>Students title</mat-card-title>
+      <button mat-button (click)="openDialog()">Open dialog</button>
     </mat-card-header>
     <mat-divider></mat-divider>
     <mat-card-content>
@@ -14,13 +15,12 @@
         mat-table
         [dataSource]="studentsDataSource"
         class="mat-elevation-z1">
-        
+        <!-- Name Column -->
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
           <td mat-cell *matCellDef="let element">{{ element.id }}</td>
         </ng-container>
 
-        <!-- Name Column -->
         <ng-container matColumnDef="firstName">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>First Name</th>
           <td mat-cell *matCellDef="let element">{{ element.firstName }}</td>
@@ -50,6 +50,18 @@
               color="primary"
             >
               Payments
+            </button>
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-icon-button color="primary" (click)="editStudent(element)">
+              <mat-icon>edit</mat-icon>
+            </button>
+            <button (click)="deleteStudent(element.matricule)" mat-icon-button color="warn">
+              <mat-icon>delete</mat-icon>
             </button>
           </td>
         </ng-container>
